Fix flickering background images

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,11 +19,16 @@ input:-webkit-autofill {
 }
 /* Normalize End */
 
+.preload-image {
+  display: none; 
+  background-image: url("../image/01.jpg"), url("../image/02.jpg"), url("../image/03.jpg"), url("../image/04.jpg"), url("../image/05.jpg");
+}
+
 .background {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  animation: slide 20s infinite;
+  animation: slide 30s linear infinite;
   height: 70vh;
   background-size: cover;
   background-position: center;
@@ -31,19 +36,22 @@ input:-webkit-autofill {
 
 @keyframes slide {
   0% {
-    background-image: url("../image/01.jpg"), url("../image/02.jpg");
+    background-image: url("../image/01.jpg");
   }
-  25% {
-    background-image: url("../image/02.jpg"), url("../image/03.jpg");
+  20% {
+    background-image: url("../image/02.jpg");
   }
-  50% {
-    background-image: url("../image/03.jpg"), url("../image/04.jpg");
+  40% {
+    background-image: url("../image/03.jpg");
   }
-  75% {
-    background-image: url("../image/04.jpg"), url("../image/05.jpg");
+  60% {
+    background-image: url("../image/04.jpg");
+  }
+  80% {
+    background-image: url("../image/05.jpg");
   }
   100% {
-    background-image: url("../image/05.jpg"), url("../image/01.jpg");
+    background-image: url("../image/01.jpg");
   }
 }
 
